# hex

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.app.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  run.sh  setup.cfg
.github/workflows/: codecov.yml  tests_and_lints.yml
app/: __main__.py  app.py  config.py  run_app.py
app/api/: __init__.py  factory.py
app/api/fast/: api.py
app/api/fast/tests/: test_api.py
app/api/flask/: api.py  factory.py
app/api/flask/tests/: test_api.py
app/bus/: __init__.py  bus.py  messages.py
app/bus/tests/: test_bus.py
app/cli/: cli.py
app/config/: app.py  store.py  types.py
app/db/: adapter.py  sql.py
app/db/tests/: test_sql.py
app/domain/: __init__.py  users.py
app/domain/tests/: test_app.py
app/messages/: __init__.py  messages.py
app/messages/tests/: test_messages.py
app/store/: __init__.py  adapter.py  redis.py  sql.py
app/store/tests/: test_redis.py  test_sql.py
local/: docker-compose.app.yaml
migrations/: env.py
migrations/versions/: 4c6c6289272a_create_user_table.py
