[tool.poetry]
name = "hex"
version = "0.1.0"
description = "Simple Hexagonal CRUD app"
authors = ["ZeroTwo <hau.au.999@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
hypercorn = "^0.13.2"
Flask = "^2.1.2"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.36"
psycopg2 = "^2.9.3"
aioredis = "^2.0.1"
asgiref = "^3.5.1"
alembic = "^1.7.7"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
